--- a/dapp/package.json
+++ b/dapp/package.json
@@ -12,6 +12,8 @@
     "@mantine/notifications": "^4.2.12",
     "@mantine/prism": "^4.2.12",
     "@mantine/rte": "^4.2.12",
+    "@metamask/providers": "^9.0.0",
+    "@self.id/framework": "^0.3.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,7 +21,9 @@
     "@types/node": "^16.11.43",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "buffer": "^6.0.3",
     "dayjs": "^1.11.3",
+    "key-did-provider-ed25519": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
