--- a/dapp/package.json
+++ b/dapp/package.json
@@ -14,6 +14,7 @@
     "@mantine/rte": "^4.2.12",
     "@metamask/providers": "^9.0.0",
     "@self.id/framework": "^0.3.2",
+    "@tableland/sdk": "^2.0.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
