--- a/up3-util-app/package.json
+++ b/up3-util-app/package.json
@@ -11,8 +11,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^4.2.12",
+    "@mantine/dates": "^4.2.12",
+    "@mantine/dropzone": "^4.2.12",
+    "@mantine/form": "^4.2.12",
+    "@mantine/hooks": "^4.2.12",
+    "@mantine/modals": "^4.2.12",
+    "@mantine/next": "^4.2.12",
+    "@mantine/notifications": "^4.2.12",
+    "@mantine/prism": "^4.2.12",
+    "@mantine/rte": "^4.2.12",
+    "@mantine/spotlight": "^4.2.12",
     "@self.id/framework": "^0.3.0",
     "boring-avatars": "^1.7.0",
+    "dayjs": "^1.11.4",
     "grommet": "^2.22.0",
     "jotai": "^1.6.2",
     "next": "^12.0.4",
