--- a/up3-util-app/package.json
+++ b/up3-util-app/package.json
@@ -39,6 +39,7 @@
     "@glazed/types": "^0.2.0",
     "@types/node": "^17.0.15",
     "@types/react": "^18.0.0",
+    "@types/styled-components": "^5.1.25",
     "dids": "^3.1.0",
     "eslint": "^8.3.0",
     "eslint-config-next": "^12.0.4",
